--- a/index.html
+++ b/index.html
@@ -8,31 +8,33 @@
 </head>
 
 <body>
-    <link rel = "stylesheet" href = "../style.css">
+    <link rel="stylesheet" href="../style.css">
     <nav>
         <ul>
             <li><a href="index.html">Introduction</a></li>
             <li><a href="scroll_animation/index.html">Drug explaination</a></li>
             <li><a href="bloodpressure/index.html">Blood Pressure</a></li>
         </ul>
-   </nav>
+    </nav>
+    <script src="intro.js" type="module"></script>
 
     <h1> Affects of Anesthesia on Blood Loss</h1>
+
     <script src="main.js" type="module"></script>
-</script src = "global.js">
-<p> Perhaps the greatest fear when it comes to going under the table is the blood loss you will undergo.
-     Blood loss is no serious matter; excessive blood loss during a surgery can lead to postoperative 
-     complications like organ failure, needing blood transfusions, or sadly, even death. Specifically, 
-     a lot of patients wonder about what drug they take prior to the operation and how it relates to the 
-     amount of blood that is lost during the surgery. For those who have done surgery before, you have 
-     probably heard the doctor advising you not to take medication like coagulants to reduce blood loss 
-     prior to surgery. Certain drugs can aid with or have no effect on blood loss, while others can prove 
-     detrimental. In this inquiry, we take you on a journey that shows you the state of today’s preoperative 
-     drugs AND its relations to blood loss in patients.</p>
-     
-<p> We trained a linear regression model based on the drugs we learned to increase blood pressure 
-    to see how they affect blood loss. Using this model we predict the blood loss a patient undergoes 
-    based on how much of each drug was administered.  </p>
+    </script src="global.js">
+    <p> Perhaps the greatest fear when it comes to going under the table is the blood loss you will undergo.
+        Blood loss is no serious matter; excessive blood loss during a surgery can lead to postoperative
+        complications like organ failure, needing blood transfusions, or sadly, even death. Specifically,
+        a lot of patients wonder about what drug they take prior to the operation and how it relates to the
+        amount of blood that is lost during the surgery. For those who have done surgery before, you have
+        probably heard the doctor advising you not to take medication like coagulants to reduce blood loss
+        prior to surgery. Certain drugs can aid with or have no effect on blood loss, while others can prove
+        detrimental. In this inquiry, we take you on a journey that shows you the state of today’s preoperative
+        drugs AND its relations to blood loss in patients.</p>
+
+    <p> We trained a linear regression model based on the drugs we learned to increase blood pressure
+        to see how they affect blood loss. Using this model we predict the blood loss a patient undergoes
+        based on how much of each drug was administered. </p>
 </body>
 
 </html>
