--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 
 <body>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
     <nav>
         <ul>
             <li><a href="index.html">Introduction</a></li>
-            <li><a href="scroll_animation/index.html">Drug explaination</a></li>
+            <li><a href="scroll_animation/index.html">Drug Explanation</a></li>
             <li><a href="bloodpressure/index.html">Blood Pressure</a></li>
         </ul>
     </nav>
