--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             <li><a href="index.html">Introduction</a></li>
             <li><a href="scroll_animation/index.html">Drug Explanation</a></li>
             <li><a href="bloodpressure/index.html">Blood Pressure</a></li>
+            <li><a href="takeaway/takeaway.html">Takeaway Insights</a></li> <!-- NEW LINK TO TAKEAWAY PAGE -->
+
+
         </ul>
     </nav>
     <script src="intro.js" type="module"></script>
