--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <link rel = "stylesheet" href = "../style.css">
+    <link rel = "stylesheet" href = "style.css">
     <nav>
         <ul>
             <li><a href="index.html">Introduction</a></li>
