--- a/scroll_animation/index.html
+++ b/scroll_animation/index.html
@@ -16,6 +16,8 @@
             max-width: 100ch;
             margin-inline: auto;
             padding: 0 1rem;
+            background-color: #f9f9f9; /* Light background for better contrast */
+            color: #333; /* Darker text for readability */
         }
         .nav-container {
             position: fixed;
@@ -40,13 +42,16 @@
             color: inherit;
             text-align: center;
             padding: 0.5em;
+            font-weight: bold;
+            transition: color 0.3s, border-bottom 0.3s;
         }
         nav a.current {
             border-bottom: 0.4em solid oklch(80% 3% 200%);
             padding-bottom: 0.1em;
         }
         nav a:hover {
-            border-bottom: 0.4em solid var(--color--accent);
+            color: var(--color--accent);
+            border-bottom: 0.4em solid var(--color--accent); /* Corrected variable name */
         }
         .title {
             margin-top: 60px; /* Adjust to ensure title is below the nav */
@@ -57,6 +62,7 @@
             border-radius: 5px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
             z-index: 10;
+            text-align: center;
         }
         .container {
             position: fixed;
@@ -64,15 +70,21 @@
             left: 50%;
             transform: translate(-50%, -50%);
             text-align: center;
+            padding: 1rem;
+            background-color: white;
+            border-radius: 10px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
         }
         .vessel {
-            width: 1000px;
+            width: 100%;
+            max-width: 1000px;
             height: 300px;
             background-color: transparent;
             border: 2px solid red;
             border-radius: 50px;
             overflow: hidden;
             position: relative;
+            margin: 1rem auto;
         }
         .circle {
             width: 30px;
@@ -108,6 +120,11 @@
         }
         html {
             accent-color: var(--color--accent);
+        }
+        p {
+            font-size: 1rem;
+            line-height: 1.6;
+            margin: 1rem 0;
         }
         
     </style>
