--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <link rel="stylesheet" href="style.css">
-    <!-- <!-- <nav>
+    <nav>
         <ul>
             <li><a href="index.html">Introduction</a></li>
             <li><a href="scroll_animation/index.html">Drug Explanation</a></li>
@@ -17,14 +17,13 @@
             <li><a href="takeaway/takeaway.html">Takeaway Insights</a></li> <!-- NEW LINK TO TAKEAWAY PAGE -->
 
 
-    </ul>
-    </nav> -->
+        </ul>
+    </nav>
     <script src="intro.js" type="module"></script>
 
     <h1> Affects of Anesthesia on Blood Loss</h1>
 
     <script src="main.js" type="module"></script>
-    <script src="global.js" type="module"></script>
 
 
     </script src="global.js">
