--- a/index.html
+++ b/index.html
@@ -8,26 +8,23 @@
 </head>
 
 <body>
-    <link rel = "stylesheet" href = "style.css">
+    <link rel="stylesheet" href="style.css">
     <nav>
         <ul>
             <li><a href="index.html">Introduction</a></li>
             <li><a href="scroll_animation/index.html">Drug Explanation</a></li>
             <li><a href="bloodpressure/index.html">Blood Pressure</a></li>
             <li><a href="takeaway/takeaway.html">Takeaway Insights</a></li> <!-- NEW LINK TO TAKEAWAY PAGE -->
-
-
         </ul>
     </nav>
     <script src="intro.js" type="module"></script>
 
-    <h1> Affects of Anesthesia on Blood Loss</h1>
+    <h1>Affects of Anesthesia on Blood Loss</h1>
 
     <script src="main.js" type="module"></script>
 
-
-    </script src="global.js">
-    <p> Perhaps the greatest fear when it comes to going under the table is the blood loss you will undergo.
+    <p>
+        Perhaps the greatest fear when it comes to going under the table is the blood loss you will undergo.
         Blood loss is no serious matter; excessive blood loss during a surgery can lead to postoperative
         complications like organ failure, needing blood transfusions, or sadly, even death. Specifically,
         a lot of patients wonder about what drug they take prior to the operation and how it relates to the
@@ -35,9 +32,15 @@
         probably heard the doctor advising you not to take medication like coagulants to reduce blood loss
         prior to surgery. Certain drugs can aid with or have no effect on blood loss, while others can prove
         detrimental. In this inquiry, we take you on a journey that shows you the state of today’s preoperative
-        drugs AND its relations to blood loss in patients.</p>
+        drugs AND its relations to blood loss in patients.
+    </p>
 
-   
+    <!-- Annotation -->
+    <p>
+        Phenylephrine has more variance compared to other drugs in the change of blood loss across time. 
+        Phenylephrine also has the highest blood loss peak at around 750ml during a 500-minute surgery. 
+        Only ephedrine has a gradual increase in blood loss over time in the longer operations.
+    </p>
 
     <h2>Animated Multi-Line Chart: Average Blood Loss Over Surgery Duration</h2>
     <div id="charts-container"></div>
