--- a/bloodpressure/index.html
+++ b/bloodpressure/index.html
@@ -18,11 +18,17 @@
     <script src="https://unpkg.com/recharts/umd/Recharts.min.js"></script>
     <link rel="stylesheet" href="../style.css">
     <style>
-        body {
+        /* body {
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
             overflow-x: hidden;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            text-align: center;
         }
 
         h1,
@@ -30,9 +36,9 @@
             text-align: center;
             padding: 20px 0;
             margin: 0;
-        }
+        } */
 
-        .section-title {
+        /* .section-title {
             background-color: #f8f8f8;
             padding: 30px 0;
             margin: 0;
@@ -41,13 +47,14 @@
             position: sticky;
             top: 0;
             z-index: 5;
-        }
+        } */
 
         .blood-container {
             height: 100vh;
-            width: 100%;
+            width: 80%;
             position: relative;
             overflow: hidden;
+            margin: 20px auto;
         }
 
         .normal-section {
@@ -96,14 +103,16 @@
 
         .info-panel {
             position: absolute;
-            top: 100px;
-            right: 20px;
+            top: 0px;
+            right: 0px;
+            left: 300px;
             background-color: rgba(255, 255, 255, 0.9);
             padding: 15px;
             border-radius: 8px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            max-width: 300px;
+            max-width: 400px;
             z-index: 10;
+            margin: 20px auto;
         }
 
         .info-panel h3 {
@@ -165,10 +174,22 @@
             background: #cc0000;
             width: 0%;
         }
+
+        nav {
+            width: 100%;
+        }
+
+        .chart-container {
+            width: 80%;
+            margin: 20px auto;
+        }
+        
     </style>
 </head>
 
 <body>
+    <!-- Add this right after <body> -->
+<div class="main-container">
     <nav>
         <ul>
             <li><a href="../index.html">Introduction</a></li>
@@ -871,6 +892,8 @@ d3.json('health_data').then(data => {
        .text("Mean Blood Loss (mL)");
 });
    </script>
+</body>
+</html>
 
 
 
